feat: Update homepage layout and styles, add reset CSS

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>KakaoWork 따라하기</title>
   </head>
   <body>
     <header>
-      <div class="header-left">
+      <div class="header-logo">
         <a href="index.html">
           <img src="" alt="로고" />
         </a>
       </div>
-      <div class="header-center">
+      <div class="header-navigation">
         <nav>
           <div class="nav-item">
             <a href="service.html">서비스소개</a>
@@ -29,7 +29,7 @@
           </div>
         </nav>
       </div>
-      <div class="header-right">
+      <div class="header-login">
         <button class="btn-inquiry">문의하기</button>
         <button class="btn-login">로그인</button>
       </div>
@@ -37,7 +37,7 @@
     <main>
       <section class="hero-section">
         <div class="hero-image">
-          <img src="hero-image.jpg" alt="대화는 편하게, 업무는 빠르게">
+          <img src="" alt="대화는 편하게, 업무는 빠르게">
         </div>
       </section>
       <section class="service-tabs">
@@ -54,52 +54,52 @@
         </ul>
       </section>
       <section class="service-tabs-01">
-        <div class="service-tabs-01-left">
-
+        <div class="service-tabs-01-introduce">
+          <img src="" alt="익숙하고 편리한 채팅 그대로">
         </div>
-        <div class="service-tabs-01-right">
-
+        <div class="service-tabs-01-image">
+          <img src="" alt="카톡이미지">
         </div>
       </section>
       <section class="service-tabs-02">
-        <div class="service-tabs-02-left">
-
+        <div class="service-tabs-02-mention">
+          <img src="" alt="멘션 이미지">
         </div>
-        <div class="service-tabs-02-center">
-
+        <div class="service-tabs-02-reply">
+          <img src="" alt="답장 이미지">
         </div>
-        <div class="service-tabs-02-right">
-
+        <div class="service-tabs-02-notice">
+          <img src="" alt="공지 이미지">
         </div>
       </section>
       <section class="service-tabs-03">
-        <div class="service-tabs-03-left">
-
+        <div class="service-tabs-03-image">
+          <img src="" alt="대화 이미지">
         </div>
-        <div class="service-tabs-03-right">
-
+        <div class="service-tabs-03-introduce">
+          <img src="" alt="의미없는 대화는 이제 그만👋">
         </div>
       </section>
       <section class="service-tabs-04">
-        <div class="service-tabs-04-left">
-
+        <div class="service-tabs-04-introduce">
+          <img src="" alt="하나하나 묻지말고 빠르게 확인하세요">
         </div>
-        <div class="service-tabs-04-right">
-
+        <div class="service-tabs-04-image">
+          <img src="" alt="안읽음 이미지">
         </div>
       </section>
       <section class="service-tabs-05">
-        <div>
-          <div>
+        <div class="service-tabs-05-outer">
+          <div class="service-tabs-05-inner-01">
             <h3>같이 쓰면 더 유용한 기능</h3>
           </div>
-          <div>
-            <div>
+          <div class="service-tabs-05-inner-02">
+            <div class="service-tabs-05-inner-02-todolist">
               <a href="">
                 <img src="" alt="할 일 관리"></img>
               </a>
             </div>
-            <div>
+            <div class="service-tabs-05-inner-02-settings">
               <a href="">
                 <img src="" alt="기업별 설정"></img>
               </a>
@@ -109,15 +109,38 @@
       </section>
     </main>
     <footer>
-      <div>
-
+      <div class="footer-company">
+        <span>kakaoenterprise</span>
       </div>
-      <div>
-        <div></div>
-        <div></div>
+      <div class="footer-contents">
+        <div class="footer-contents-list">
+          <a href="#">회사소개</a>
+          <a href="#">인재영입</a>
+          <a href="#">개인정보처리방침</a>
+          <a href="#">서비스이용약관</a>
+          <a href="#">고객센터</a>
+        </div>
+        <div class="footer-contents-copyright">
+          <p>개인정보처리방침 | 위치기반서비스이용약관 | 운영정책 | 서비스이용약관</p>
+          <p>사업자등록번호 741-81-01531 | 통신판매번호 2020-성남분당8-0444 | KakaoEnterprise Corp.</p>
+        </div>
       </div>
-      <div>
-
+      <div class="footer-sns">
+        <a href="#" class="social-icon">
+          <img src="" alt="인스타그램">
+        </a>
+        <a href="#" class="social-icon">
+          <img src="" alt="유튜브">
+        </a>
+        <a href="#" class="social-icon">
+          <img src="" alt="페이스북">
+        </a>
+        <a href="#" class="social-icon">
+          <img src="" alt="트위터">
+        </a>
+        <a href="#" class="social-icon">
+          <img src="" alt="링크드인">
+        </a>
       </div>
     </footer>
   </body>
