refactor: Enhance footer layout and styles, update social media icons, and adjust service tab dimensions

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </main>
     <footer>
       <div class="footer-company">
-        <span>kakaoenterprise</span>
+        <span class="kakao">kakao</span><span class="enterprise">enterprise</span>
       </div>
       <div class="footer-contents">
         <div class="footer-contents-list">
@@ -136,10 +136,10 @@
           <img src="" alt="페이스북">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="트위터">
+          <img src="" alt="블로그">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="링크드인">
+          <img src="" alt="카카오톡채널">
         </a>
       </div>
     </footer>
