feat: Update images in homepage sections and adjust styles for better layout

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <main>
       <section class="hero-section">
         <div class="hero-image">
-          <img src="" alt="대화는 편하게, 업무는 빠르게">
+          <img src="./images/image00.png" alt="대화는 편하게, 업무는 빠르게">
         </div>
       </section>
       <section class="service-tabs">
@@ -55,53 +55,53 @@
       </section>
       <section class="service-tabs-01">
         <div class="service-tabs-01-introduce">
-          <img src="" alt="익숙하고 편리한 채팅 그대로">
+          <img src="./images/image01.png" alt="익숙하고 편리한 채팅 그대로">
         </div>
         <div class="service-tabs-01-image">
-          <img src="" alt="카톡이미지">
+          <img src="./images/image02.png" alt="카톡이미지">
         </div>
       </section>
       <section class="service-tabs-02">
         <div class="service-tabs-02-mention">
-          <img src="" alt="멘션 이미지">
+          <img src="./images/mention.png" alt="멘션 이미지">
         </div>
         <div class="service-tabs-02-reply">
-          <img src="" alt="답장 이미지">
+          <img src="./images/reply.png" alt="답장 이미지">
         </div>
         <div class="service-tabs-02-notice">
-          <img src="" alt="공지 이미지">
+          <img src="./images/notice.png" alt="공지 이미지">
         </div>
       </section>
       <section class="service-tabs-03">
         <div class="service-tabs-03-image">
-          <img src="" alt="대화 이미지">
+          <img src="./images/image03.png" alt="대화 이미지">
         </div>
         <div class="service-tabs-03-introduce">
-          <img src="" alt="의미없는 대화는 이제 그만👋">
+          <img src="./images/image04.png" alt="의미없는 대화는 이제 그만👋">
         </div>
       </section>
       <section class="service-tabs-04">
         <div class="service-tabs-04-introduce">
-          <img src="" alt="하나하나 묻지말고 빠르게 확인하세요">
+          <img src="./images/image05.png" alt="하나하나 묻지말고 빠르게 확인하세요">
         </div>
         <div class="service-tabs-04-image">
-          <img src="" alt="안읽음 이미지">
+          <img src="./images/image06.png" alt="안읽음 이미지">
         </div>
       </section>
       <section class="service-tabs-05">
         <div class="service-tabs-05-outer">
           <div class="service-tabs-05-inner-01">
-            <h3>같이 쓰면 더 유용한 기능</h3>
+            <h2>같이 쓰면 더 유용한 기능</h2>
           </div>
           <div class="service-tabs-05-inner-02">
             <div class="service-tabs-05-inner-02-todolist">
               <a href="">
-                <img src="" alt="할 일 관리"></img>
+                <img src="./images/todolist.png" alt="할 일 관리"></img>
               </a>
             </div>
             <div class="service-tabs-05-inner-02-settings">
               <a href="">
-                <img src="" alt="기업별 설정"></img>
+                <img src="./images/settings.png" alt="기업별 설정"></img>
               </a>
             </div>
           </div>
@@ -127,19 +127,19 @@
       </div>
       <div class="footer-sns">
         <a href="#" class="social-icon">
-          <img src="" alt="인스타그램">
+          <img src="./images/insta.png" alt="인스타그램">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="유튜브">
+          <img src="./images/youtube.png" alt="유튜브">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="페이스북">
+          <img src="./images/facebook.png" alt="페이스북">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="블로그">
+          <img src="./images/blog.png" alt="블로그">
         </a>
         <a href="#" class="social-icon">
-          <img src="" alt="카카오톡채널">
+          <img src="./images/channel.png" alt="카카오톡채널">
         </a>
       </div>
     </footer>
