--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css" />
     <title>KakaoWork 따라하기</title>
   </head>
@@ -10,7 +11,7 @@
     <header>
       <div class="header-logo">
         <a href="index.html">
-          <img src="" alt="로고" />
+          <img src="./images/logo.png" alt="로고" />
         </a>
       </div>
       <div class="header-navigation">
